--- a/app/tools.yml
+++ b/app/tools.yml
@@ -3,7 +3,7 @@ version: "2.1"
 services:
   # docker-compose -f app/tools.yml run --rm codegen
   codegen:
-    image: supinf/go-swagger:0.13.0
+    image: supinf/go-swagger:0.14.0
     command: generate server -P lib.Principal -f spec.yaml -t app/generated
     volumes:
       - ..:/go/src/github.com/pottava/ngc-registry-api
@@ -12,14 +12,23 @@ services:
   # docker-compose -f app/tools.yml run --rm deps init -no-examples -skip-tools
   # docker-compose -f app/tools.yml run --rm deps ensure
   deps:
-    image: supinf/go-dep:0.4.1
+    image: supinf/go-dep:0.5
+    volumes:
+      - .:/go/src/github.com/pottava/ngc-registry-api/app
+    working_dir: /go/src/github.com/pottava/ngc-registry-api/app
+
+  # docker-compose -f app/tools.yml run --rm lint
+  lint:
+    image: supinf/golangci-lint:1.12
+    command: run --config .golangci.yml
     volumes:
       - .:/go/src/github.com/pottava/ngc-registry-api/app
     working_dir: /go/src/github.com/pottava/ngc-registry-api/app
 
   # docker-compose -f app/tools.yml run --rm test
   test:
-    image: pottava/golang:1.10
+    image: ngc-registry-api/go:20190403
+    build: .
     command: sh -c "go test -cover -bench -benchmem `go list ./... | grep -v /generated/` -v"
     volumes:
       - .:/go/src/github.com/pottava/ngc-registry-api/app
@@ -27,7 +36,7 @@ services:
 
   # docker-compose -f app/tools.yml run --rm build
   build:
-    image: pottava/gox:go1.10
+    image: supinf/go-gox:1.11
     command: --osarch "linux/amd64 darwin/amd64 windows/amd64" -ldflags "-s -w" -output "/go/src/github.com/pottava/ngc-registry-api/dist/{{.OS}}_{{.Arch}}"
     volumes:
       - ..:/go/src/github.com/pottava/ngc-registry-api
